--- a/varsitypage.html
+++ b/varsitypage.html
@@ -12,6 +12,52 @@
  
 </head>
 <body>
+    <!-- Nav -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Ranking</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Discover</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
+                      Events
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1"         aria-disabled="true">PREPARE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">APPLY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CAREERS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">COMMUNITY</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search"   aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+          </div>
+        </div>
+    </nav>
     <div class="container">
         <div class="row varsityPage mt-3">
             <div class="col-lg-12 col-md-12">
@@ -313,11 +359,45 @@
         <!-- End Featured Program3-->
     </div>
     <!-- End Featured Program-->
-    <br>  
-    <br>
-    <br>
-    <br>
 
+    <!-- Footer -->
+    <footer class="bg-dark">
+        <div class="row container pt-4 pb-5">
+            <div class="col-lg-8">
+                <div>
+                    <a href="#" class="footer-menu" >ABOUT</a>
+                    <a href="#" class="footer-menu" >CONTACT</a>
+                    <a href="#" class="footer-menu" >PRIVACY</a>
+                    <a href="#" class="footer-menu" >USERS</a>
+                    <a href="#" class="footer-menu" >COOKIES</a>
+                </div>
+                <div class="mt-4">
+                    <small id="footer-small">© QS Quacquarelli Symonds Limited 1994 - 2021. All rights reserved. </small>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <!-- Social Icons -->
+                <div id="social-icon-bar">
+                    <div >
+                        <a href="#" target="_blank"><img src="img/footer/facebook.png" class="social-icon"></a>
+                    </div>
+                    <div >
+                        <a href="#" target="_blank"><img src="img/footer/twitter.png" class="social-icon"></a>
+                    </div>
+                    <div >
+                        <a href="#" target="_blank"><img src="img/footer/linkedin.png" class="social-icon"></a>
+                    </div>
+                    <div >
+                        <a href="#" target="_blank"><img src="img/footer/youtube.png" class="social-icon"></a>
+                    </div>
+                    <div >
+                        <a href="#" target="_blank"><img src="img/footer/instagram.png" class="social-icon"></a>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
