--- a/varsitypage.html
+++ b/varsitypage.html
@@ -13,55 +13,55 @@
 </head>
 <body>
     <!-- Nav -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Ranking</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Discover</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
-                          Events
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1"         aria-disabled="true">PREPARE</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">APPLY</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CAREERS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">COMMUNITY</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search"   aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-              </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <div class="row varsityPage mt-3">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Ranking</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Discover</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
+                      Events
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1"         aria-disabled="true">PREPARE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">APPLY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CAREERS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">COMMUNITY</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search"   aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+          </div>
+        </div>
+    </nav>
+
+    <!-- Banner Container -->
+    <div>
+        <div class="row varsityPage mt-0">
             <div class="col-lg-12 col-md-12">
                 <div class="Banner">
                     <img class="BannerImg w-100" src="img/Thammasat-University -1630923733.webp">
@@ -123,11 +123,8 @@
                         <p class="compare">Shortlist</p>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
 
     <div class="container ">
@@ -364,7 +361,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark">
-        <div class="row container pt-4 pb-5">
+        <div class="row container ms-3 pt-4 pb-5" id="footer">
             <div class="col-lg-8">
                 <div>
                     <a href="#" class="footer-menu" >ABOUT</a>
@@ -397,7 +394,6 @@
                     </div>
                 </div>
             </div>
-            
         </div>
     </footer>
     
