--- a/subject-page.html
+++ b/subject-page.html
@@ -10,7 +10,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="subject-page.css">
 </head>
-<body class="ms-4">
+<body>
     <!-- Nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
