--- a/university-find.html
+++ b/university-find.html
@@ -142,7 +142,7 @@
     
     <!-- Footer -->
     <footer class="bg-dark">
-        <div class="row container pt-4 pb-5">
+        <div class="row container pt-4 pb-5 gx-5">
             <div class="col-lg-8">
                 <div>
                     <a href="#" class="footer-menu" >ABOUT</a>
