--- a/varsitypage.html
+++ b/varsitypage.html
@@ -361,7 +361,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark">
-        <div class="row container ms-3 pt-4 pb-5" id="footer">
+        <div class="row container ms-3 pt-4 pb-5 gx-5">
             <div class="col-lg-8">
                 <div>
                     <a href="#" class="footer-menu" >ABOUT</a>
