--- a/single-university-page.html
+++ b/single-university-page.html
@@ -344,7 +344,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark">
-        <div class="row container ms-3 pt-4 pb-5 gx-5">
+        <div class="row ms-3 pt-4 pb-5 gx-5">
             <div class="col-lg-8">
                 <div>
                     <a href="#" class="footer-menu" >ABOUT</a>
