--- a/subject-page.html
+++ b/subject-page.html
@@ -142,7 +142,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark">
-        <div class="row container pt-4 pb-5 gx-5">
+        <div class="row pt-4 pb-5 gx-0">
             <div class="col-lg-8">
                 <div>
                     <a href="#" class="footer-menu" >ABOUT</a>
@@ -179,6 +179,20 @@
         </div>
     </footer>
     
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <!-- JS Bundle-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
