--- a/single-university-page.html
+++ b/single-university-page.html
@@ -194,14 +194,14 @@
 
     <!-- start Featured Program-->
     <div class="features-university" >
-        <div class="ps-3 programinfo">
+        <div class="programinfo">
             <div class="row">
                 <h2>Featured University</h2>
             </div>
         </div>
         
         <!-- start Featured Program1-->
-        <div class="ps-3 programinfo">
+        <div class="programinfo">
             <div class="row program_details">
                 <div class="col-lg-4 col-md-4">
                     <img class="program_image" src="img/pg1.JPG"> 
@@ -238,7 +238,7 @@
             <!-- End Featured Program1-->
 
             <!-- start Featured Program2-->
-            <div class="ps-3 programinfo">
+            <div class="programinfo">
                 <div class="row program_details">
                 <div class="col-lg-4 col-md-4">
                     <img class="program_image" src="img/pg2.JPG"> 
@@ -273,7 +273,7 @@
         </div>
 
         <!-- start Featured Program3-->
-        <div class="ps-3 programinfo">
+        <div class="programinfo">
             <div class="row program_details">
             <div class="col-lg-4 col-md-4">
                 <img class="program_image" src="img/imageuniversity1.JPG"> 
@@ -311,7 +311,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark">
-        <div class="row ms-3 pt-4 pb-5 gx-5">
+        <div class="row ms-3 pt-4 pb-5 gx-0">
             <div class="col-lg-8">
                 <div>
                     <a href="#" class="footer-menu" >ABOUT</a>
