--- a/home.html
+++ b/home.html
@@ -60,15 +60,17 @@
             </div>
         </nav>
 
-        <!-- Header Breadcrumb -->
-        <nav aria-label="breadcrumb" class="ps-2 pe-2">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page"><a href="#">Education</a></li>
-                <li class="breadcrumb-item active" aria-current="page"><a href="#">Global University</a></li>
-                <li class="breadcrumb-item active" aria-current="page"><a href="#">Best Global Universities Rank...</a></li>
-            </ol>
-        </nav>
+        <!-- Main Body -->
+        <main class="main-body">
+            <!-- Header Breadcrumb -->
+            <nav aria-label="breadcrumb" class="ps-2 pe-2">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item active" aria-current="page"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page"><a href="#">Education</a></li>
+                    <li class="breadcrumb-item active" aria-current="page"><a href="#">Global University</a></li>
+                    <li class="breadcrumb-item active" aria-current="page"><a href="#">Best Global Universities Rank...</a></li>
+                </ol>
+            </nav>
         
         <!-- Header Brief -->
         <h1 class="fw-bold fs-1 ps-2 pe-2">2021 Best Global Universities Rankings</h1>
@@ -366,6 +368,7 @@
                 </div>
             </div>
         </div>
+        </main>
 
         <!-- Footer -->
         <footer class="bg-dark">
