--- a/home.html
+++ b/home.html
@@ -368,7 +368,7 @@
         </main>
 
         <!-- Pagination -->
-        <nav aria-label="...">
+        <nav aria-label="..." id="pagination">
             <ul class="pagination">
                 <li class="page-item disabled">
                   <a class="page-link" href="#" tabindex="-1"     aria-disabled="true">Previous</a>
