--- a/single-university-page.html
+++ b/single-university-page.html
@@ -131,7 +131,7 @@
                 </div>
 
                 <!-- University About -->
-                <div class="row ps-3">
+                <div class="row p-3">
                     <div class="col-lg-12 col-md-12">
                         <div class="aboutuni">
                             <h2>About</h2>
@@ -146,7 +146,7 @@
                 </div>
 
                 <!--Available Program Start-->
-                <div class="available ps-3">
+                <div class="available p-3">
                     <div class="row">
                         <h2>Available Programs</h2>
                         <p style="font-weight: bold;">MBA</p>
@@ -293,7 +293,7 @@
                 
             </div>
 
-            <div class="col-lg-2">
+            <div class="col-lg-2 p-3">
                 <h2 class="bg-secondary" style="height: 1000px;">Add Section it is</h2>
             </div>
         </div>  
