--- a/subject-page.html
+++ b/subject-page.html
@@ -58,87 +58,89 @@
         </div>
     </nav>
 
-    <!-- Banner -->
-    <div>
-        <img class="w-75 m-4" src="img/FindYourProgramNov2020.png">
-    </div>
+    <main>
+        <!-- Banner -->
+        <div>
+            <img class="w-75" src="img/FindYourProgramNov2020.png">
+        </div>
 
-    <!-- Program Related Box -->
-    <div class="row m-4 p-2">
-        <div class="row border border-primary-1 p-3">
-            <div class="col-lg-2">
-                <strong>Program Name: </strong>
+        <!-- Program Related Box -->
+        <div class="row">
+            <div class="row border border-1 p-3">
+                <div class="col-lg-2">
+                    <strong>Program Name: </strong>
+                </div>
+                <div class="col-lg-10">
+                    <a href="/accounting" target="_blank">Accounting</a>
+                </div>
             </div>
-            <div class="col-lg-10">
-                <a href="/accounting" target="_blank">Accounting</a>
+            <div class="row border border-1 border-top-0 p-3">
+                <div class="col-lg-2">
+                    <strong>Faculty: </strong>
+                </div>
+                <div class="col-lg-10">
+                    <a href="/bussiness" target="_blank">Business Administration</a>
+                </div>
             </div>
-        </div>
-        <div class="row border border-primary-1 border-top-0 p-3">
-            <div class="col-lg-2">
-                <strong>Faculty: </strong>
+            <div class="row border border-1 border-top-0 p-3">
+                <div class="col-lg-2">
+                    <strong>Degree: </strong>
+                </div>
+                <div class="col-lg-10">
+                    <p>Bachelor Degree (4 Years)</p>
+                </div>
             </div>
-            <div class="col-lg-10">
-                <a href="/bussiness" target="_blank">Business Administration</a>
+            <div class="row border border-1 border-top-0 p-3">
+                <div class="col-lg-2">
+                    <strong>Careers (custom): </strong>
+                </div>
+                <div class="col-lg-10">
+                    <p>Graduates find jobs as accountants, auditors, tax consultants, business analysts, city administrators, operations managers, commercial account managers and credit counsellors.</p>
+                </div>
             </div>
-        </div>
-        <div class="row border border-primary-1 border-top-0 p-3">
-            <div class="col-lg-2">
-                <strong>Degree: </strong>
+            <div class="row border border-1 border-top-0 p-3">
+                <div class="col-lg-2">
+                    <strong>Related Programs: </strong>
+                </div>
+                <div class="col-lg-10">
+                    <a target="_blank" href="/economics">Economics</a> <br>
+                    <a target="_blank" href="">Entrepreneurship</a> <br>
+                    <a target="_blank" href="">International Business</a> <br>
+                    <a target="_blank" href="">Management</a> <br>
+                    <a target="_blank" href="">Marketing</a> <br>
+                    <a target="_blank" href="">Mathematics</a>
+                </div>
             </div>
-            <div class="col-lg-10">
-                <p>Bachelor Degree (4 Years)</p>
-            </div>
-        </div>
-        <div class="row border border-primary-1 border-top-0 p-3">
-            <div class="col-lg-2">
-                <strong>Careers (custom): </strong>
-            </div>
-            <div class="col-lg-10">
-                <p>Graduates find jobs as accountants, auditors, tax consultants, business analysts, city administrators, operations managers, commercial account managers and credit counsellors.</p>
-            </div>
-        </div>
-        <div class="row border border-primary-1 border-top-0 p-3">
-            <div class="col-lg-2">
-                <strong>Related Programs: </strong>
-            </div>
-            <div class="col-lg-10">
-                <a target="_blank" href="/economics">Economics</a> <br>
-                <a target="_blank" href="">Entrepreneurship</a> <br>
-                <a target="_blank" href="">International Business</a> <br>
-                <a target="_blank" href="">Management</a> <br>
-                <a target="_blank" href="">Marketing</a> <br>
-                <a target="_blank" href="">Mathematics</a>
-            </div>
-        </div>
-        <div class="row border border-primary-1 border-top-0 p-3">
-            <div class="col-lg-2">
-                <strong>Program Description: </strong>
-            </div>
-            <div class="col-lg-10">
-                <p>Interested in understanding the business world from a financial perspective? Then accounting is a great field for you. <br> <br>
+            <div class="row border border-1 border-top-0 p-3">
+                <div class="col-lg-2">
+                    <strong>Program Description: </strong>
+                </div>
+                <div class="col-lg-10">
+                    <p>Interested in understanding the business world from a financial perspective? Then accounting is a great field for you. <br> <br>
 
-                Many of the world's top managers and CEOs are accountants. Choosing accounting and taxation as your focus helps you develop an understanding of accounting theories and practices as applied to modern business organizations. It will help you gain experience with managerial, financial and cost accounting practices and will help you learn how to prepare and analyze financial statements.</p>
-                <br>
-                <strong>Sample Courses:</strong>
-                <p>Financial Accounting, Managerial Accounting, Taxation for Business Decisions, Auditing Theory and Application, Cost Accounting.</p>
-                <br>
-                <strong>Career Opportunities:</strong>
-                <p>Graduates find jobs as accountants, auditors, tax consultants, business analysts, city administrators, operations managers, commercial account managers and credit counsellors.</p>
-                <br>
-                <p><strong>Website:</strong><a href="#" target="_blank"> www.uregina.ca/business</a></p>
-                <br>
-                <p><strong>Undergraduate Calendar (Program Details):</strong> <a href="#" target="_blank"> uregina.ca/studen/publications</a></p>
+                    Many of the world's top managers and CEOs are accountants. Choosing accounting and taxation as your focus helps you develop an understanding of accounting theories and practices as applied to modern business organizations. It will help you gain experience with managerial, financial and cost accounting practices and will help you learn how to prepare and analyze financial statements.</p>
+                    <br>
+                    <strong>Sample Courses:</strong>
+                    <p>Financial Accounting, Managerial Accounting, Taxation for Business Decisions, Auditing Theory and Application, Cost Accounting.</p>
+                    <br>
+                    <strong>Career Opportunities:</strong>
+                    <p>Graduates find jobs as accountants, auditors, tax consultants, business analysts, city administrators, operations managers, commercial account managers and credit counsellors.</p>
+                    <br>
+                    <p><strong>Website:</strong><a href="#" target="_blank"> www.uregina.ca/business</a></p>
+                    <br>
+                    <p><strong>Undergraduate Calendar (Program Details):</strong> <a href="#" target="_blank"> uregina.ca/studen/publications</a></p>
+                </div>
+            </div>
+            <div class="row border border-1 border-top-0 p-3 ">
+                <div class="col-lg-2">
+                    <strong>Last Updated Date: </strong>
+                </div>
+                <div class="col-lg-10">
+                    <p>September 01, 2021 07:29 PM</p>
+                </div>
             </div>
         </div>
-        <div class="row border border-1 border-top-0 p-3 ">
-            <div class="col-lg-2">
-                <strong>Last Updated Date: </strong>
-            </div>
-            <div class="col-lg-10">
-                <p>September 01, 2021 07:29 PM</p>
-            </div>
-        </div>
-    </div>
+    </main>
 
     <!-- Footer -->
     <footer class="bg-dark">
