--- a/subject-page.html
+++ b/subject-page.html
@@ -60,8 +60,8 @@
 
     <main>
         <!-- Banner -->
-        <div class="">
-            <img class="w-75" src="img/FindYourProgramNov2020.png" />
+        <div class="mb-4">
+            <img class="w-100" src="img/FindYourProgramNov2020.png" />
         </div>
     
         <!-- Program Related Box -->
@@ -146,6 +146,22 @@
         </div>
     </main>
     
+    <!-- Pagination -->
+    <nav aria-label="..." id="pagination">
+        <ul class="pagination">
+            <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1"     aria-disabled="true">Previous</a>
+            </li>
+            <li class="page-item active"><a class="page-link" href="#">1</a></li>
+            <li class="page-item" aria-current="page">
+              <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>    
 
     <!-- Footer -->
     <footer class="bg-dark">
