--- a/subject-page.html
+++ b/subject-page.html
@@ -66,7 +66,7 @@
     
         <!-- Program Related Box -->
         <div class="row ">
-            <div class="row border border-1 p-3">
+            <div class="row border border-1 border-success p-3">
                 <div class="col-lg-2">
                     <strong>Program Name: </strong>
                 </div>
@@ -74,7 +74,7 @@
                     <a href="/accounting" target="_blank">Accounting</a>
                 </div>
             </div>
-            <div class="row border border-1 border-top-0 p-3">
+            <div class="row border border-1 border-success border-top-0 p-3">
                 <div class="col-lg-2">
                     <strong>Faculty: </strong>
                 </div>
@@ -82,7 +82,7 @@
                     <a href="/bussiness" target="_blank">Business Administration</a>
                 </div>
             </div>
-            <div class="row border border-1 border-top-0 p-3">
+            <div class="row border border-1 border-success border-top-0 p-3">
                 <div class="col-lg-2">
                     <strong>Degree: </strong>
                 </div>
@@ -90,7 +90,7 @@
                     <p>Bachelor Degree (4 Years)</p>
                 </div>
             </div>
-            <div class="row border border-1 border-top-0 p-3">
+            <div class="row border border-1 border-success border-top-0 p-3">
                 <div class="col-lg-2">
                     <strong>Careers (custom): </strong>
                 </div>
@@ -98,7 +98,7 @@
                     <p>Graduates find jobs as accountants, auditors, tax consultants, business analysts, city administrators, operations managers, commercial account managers and credit counsellors.</p>
                 </div>
             </div>
-            <div class="row border border-1 border-top-0 p-3">
+            <div class="row border border-1 border-success border-top-0 p-3">
                 <div class="col-lg-2">
                     <strong>Related Programs: </strong>
                 </div>
@@ -111,7 +111,7 @@
                     <a target="_blank" href="">Mathematics</a>
                 </div>
             </div>
-            <div class="row border border-1 border-top-0 p-3">
+            <div class="row border border-1 border-success border-top-0 p-3">
                 <div class="col-lg-2">
                     <strong>Program Description: </strong>
                 </div>
@@ -135,7 +135,7 @@
                     <p><strong>Undergraduate Calendar (Program Details):</strong> <a href="#" target="_blank"> uregina.ca/studen/publications</a></p>
                 </div>
             </div>
-            <div class="row border border-1 border-top-0 p-3">
+            <div class="row border border-1 border-success border-top-0 p-3">
                 <div class="col-lg-2">
                     <strong>Last Updated Date: </strong>
                 </div>
