--- a/subject-page.html
+++ b/subject-page.html
@@ -147,7 +147,7 @@
     </main>
     
     <!-- Pagination -->
-    <nav aria-label="..." id="pagination">
+    <!-- <nav aria-label="..." id="pagination">
         <ul class="pagination">
             <li class="page-item disabled">
               <a class="page-link" href="#" tabindex="-1"     aria-disabled="true">Previous</a>
@@ -161,10 +161,10 @@
               <a class="page-link" href="#">Next</a>
             </li>
         </ul>
-    </nav>    
+    </nav>     -->
 
     <!-- Footer -->
-    <footer class="bg-dark">
+    <footer class="bg-dark pt-5">
         <div class="row container pt-4 pb-5">
             <div class="col-lg-8">
                 <div>
