--- a/single-university-page.html
+++ b/single-university-page.html
@@ -65,8 +65,8 @@
     </div>
     
     <main class="row gx-3">
-        <div class="col-lg-10">
-            <div class="">
+        <div class="col-lg-9">
+            <div>
                 <div class="bannerLogo">
                     <img class="underImage" src="img/thammasat-university_logo.webp" />
                 </div>
@@ -287,9 +287,11 @@
             </div>            
         </div>
 
-        <div class="col-lg-2 bg-danger">
+        <div class="col-lg-3 bg-secondary">
             <!-- Add Section -->
-            <h1>Hello</h1>
+            <div class="p-3 justify">
+                <h1>ADD is an older term for what is now known as the inattentive type of ADHD.</h1>
+            </div>
         </div>
     </main> 
          
