--- a/home.html
+++ b/home.html
@@ -271,7 +271,7 @@
                             <div class="col-lg-4 uniImage">
                                 <img src="img/imageuniversity1.jpg" class="w-100" alt=""/>
                             </div>
-                            <div class="col-lg-6 state pt-4" id="university">
+                            <div class="col-lg-6 state pt-4">
                                 <div>
                                     <h3><a href="#">Harvard University</a></h3>
                                     <div class="d-flex">
@@ -293,20 +293,20 @@
                                 </div>
                                 <a href="">Read More >>></a>
                             </div>
-                            <div class="col-lg-2 d-flex flex-column pt-3 globalScore" id="globalScore">
+                            <div class="col-lg-2 d-flex flex-column pt-3 globalScore">
                                 <h6>GLOBAL SCORE</h6>
                                 <strong>100.0</strong>
                             </div>
                         </div>
                         <div class="row p-3 ms-2 me-2 feature-universities">
                             <div class="col-lg-4 uniImage">
-                                <img src="img/imageuniversity1.jpg" class="w-100" />
+                                <img src="img/imageuniversity1.jpg" class="w-100" alt=""/>
                             </div>
-                            <div class="col-lg-6 state pt-4" id="university">
+                            <div class="col-lg-6 state pt-4">
                                 <div>
                                     <h3><a href="#">Harvard University</a></h3>
                                     <div class="d-flex">
-                                        <img src="img/USA.svg" />
+                                        <img src="img/USA.svg" alt=""/>
                                         <div class="d-flex ps-2">
                                             <span>United States</span>
                                             <span>|</span>
@@ -315,7 +315,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex">
-                                    <img src="img/mini-badge-color.svg" />
+                                    <img src="img/mini-badge-color.svg" alt=""/>
                                     <div class="d-flex ps-2">
                                         <strong>#1</strong>
                                         <p>in</p>
@@ -324,20 +324,20 @@
                                 </div>
                                 <a href="">Read More >>></a>
                             </div>
-                            <div class="col-lg-2 d-flex flex-column pt-3" id="globalScore">
+                            <div class="col-lg-2 d-flex flex-column pt-3">
                                 <h6>GLOBAL SCORE</h6>
                                 <strong>100.0</strong>
                             </div>
                         </div>
                         <div class="row p-3 ms-2 me-2 feature-universities">
                             <div class="col-lg-4 uniImage">
-                                <img src="img/imageuniversity1.jpg" class="w-100" />
+                                <img src="img/imageuniversity1.jpg" class="w-100" alt=""/>
                             </div>
-                            <div class="col-lg-6 state pt-4" id="university">
+                            <div class="col-lg-6 state pt-4">
                                 <div>
                                     <h3><a href="#">Harvard University</a></h3>
                                     <div class="d-flex">
-                                        <img src="img/USA.svg" />
+                                        <img src="img/USA.svg" alt=""/>
                                         <div class="d-flex ps-2">
                                             <span>United States</span>
                                             <span>|</span>
@@ -346,7 +346,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex">
-                                    <img src="img/mini-badge-color.svg" />
+                                    <img src="img/mini-badge-color.svg" alt=""/>
                                     <div class="d-flex ps-2">
                                         <strong>#1</strong>
                                         <p>in</p>
@@ -355,7 +355,7 @@
                                 </div>
                                 <a href="">Read More >>></a>
                             </div>
-                            <div class="col-lg-2 d-flex flex-column pt-3" id="globalScore">
+                            <div class="col-lg-2 d-flex flex-column pt-3">
                                 <h6>GLOBAL SCORE</h6>
                                 <strong>100.0</strong>
                             </div>
@@ -371,7 +371,7 @@
         <nav aria-label="..." id="pagination">
             <ul class="pagination">
                 <li class="page-item disabled">
-                  <a class="page-link" href="#" tabindex="-1"     aria-disabled="true">Previous</a>
+                  <a class="page-link" href="#" tabindex="-1">Previous</a>
                 </li>
                 <li class="page-item active"><a class="page-link" href="#">1</a></li>
                 <li class="page-item" aria-current="page">
@@ -403,19 +403,19 @@
                     <!-- Social Icons -->
                     <div id="social-icon-bar" class="ms-3">
                         <div >
-                            <a href="#" target="_blank"><img src="img/footer/facebook.png"  class="social-icon"></a>
+                            <a href="#" target="_blank"><img src="img/footer/facebook.png"  class="social-icon" alt=""></a>
                         </div>
                         <div >
-                            <a href="#" target="_blank"><img src="img/footer/twitter.png"   class="social-icon"></a>
+                            <a href="#" target="_blank"><img src="img/footer/twitter.png"   class="social-icon" alt=""></a>
                         </div>
                         <div >
-                            <a href="#" target="_blank"><img src="img/footer/linkedin.png"  class="social-icon"></a>
+                            <a href="#" target="_blank"><img src="img/footer/linkedin.png"  class="social-icon" alt=""></a>
                         </div>
                         <div >
-                            <a href="#" target="_blank"><img src="img/footer/youtube.png"   class="social-icon"></a>
+                            <a href="#" target="_blank"><img src="img/footer/youtube.png"   class="social-icon" alt=""></a>
                         </div>
                         <div >
-                            <a href="#" target="_blank"><img src="img/footer/instagram.png"     class="social-icon"></a>
+                            <a href="#" target="_blank"><img src="img/footer/instagram.png"     class="social-icon" alt=""></a>
                         </div>
                     </div>
                 </div>
