--- a/subject.html
+++ b/subject.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subject Page</title>
+    <title>Subject</title>
     <!-- CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- External CSS -->
-    <link rel="stylesheet" href="subject-page.css">
+    <link rel="stylesheet" href="program.css">
 </head>
 <body>
     <!-- Nav -->
@@ -68,10 +68,26 @@
         <div class="row ">
             <div class="row border border-1 border-success p-3">
                 <div class="col-lg-2">
+                    <strong>Program Name: </strong>
+                </div>
+                <div class="col-lg-10">
+                    <a href="/bussiness" target="_blank">Accounting</a>
+                </div>
+            </div>
+            <div class="row border border-1 border-success border-top-0 p-3">
+                <div class="col-lg-2">
                     <strong>Faculty: </strong>
                 </div>
                 <div class="col-lg-10">
                     <a href="/bussiness" target="_blank">Business Administration</a>
+                </div>
+            </div>
+            <div class="row border border-1 border-success border-top-0 p-3">
+                <div class="col-lg-2">
+                    <strong>Campuses: </strong>
+                </div>
+                <div class="col-lg-10">
+                    <p>FNUniv U of R</p>
                 </div>
             </div>
             <div class="row border border-1 border-success border-top-0 p-3">
