--- a/subject.html
+++ b/subject.html
@@ -38,7 +38,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1"         aria-disabled="true">PREPARE</a>
+                        <a class="nav-link" href="#" tabindex="-1">PREPARE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">APPLY</a>
@@ -61,7 +61,7 @@
     <main class="mb-4">
         <!-- Banner -->
         <div class="mb-4">
-            <img class="w-100" src="img/FindYourProgramNov2020.png" />
+            <img class="w-100" src="img/FindYourProgramNov2020.png" alt=""/>
         </div>
     
         <!-- Program Related Box -->
@@ -173,19 +173,19 @@
                 <!-- Social Icons -->
                 <div id="social-icon-bar">
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/facebook.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/facebook.png" class="social-icon" alt=""></a>
                     </div>
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/twitter.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/twitter.png" class="social-icon" alt=""></a>
                     </div>
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/linkedin.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/linkedin.png" class="social-icon" alt=""></a>
                     </div>
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/youtube.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/youtube.png" class="social-icon" alt=""></a>
                     </div>
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/instagram.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/instagram.png" class="social-icon" alt=""></a>
                     </div>
                 </div>
             </div>           
