--- a/program.html
+++ b/program.html
@@ -69,7 +69,7 @@
             <h2 class="p-2 border-bottom border-5 border-warning">A Program For Every Passion</h2>
             <small>Browse our academic programs alphabetically by program name. Click a program name for more information.</small>
             <!-- Alphabet Box -->
-            <div class="mt-3 mb-4 border border-secondary">
+            <div class="mt-3 mb-4 border border-secondary text-center">
                 <small class="p-2 fs-6">All A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</small>
             </div>
         </div>
