--- a/university-find.html
+++ b/university-find.html
@@ -39,7 +39,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1"         aria-disabled="true">PREPARE</a>
+                            <a class="nav-link" href="#" tabindex="-1">PREPARE</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">APPLY</a>
@@ -61,7 +61,7 @@
         <!-- Explore -->
         <div class="align-items-center d-flex ps-4">
             <div class="m-2">
-                <img src="img/cap.jpg" width="100px" >
+                <img src="img/cap.jpg" width="100" alt="">
             </div>
             <div class="m-3">
                 <h4>Hi there, let's get started!</h4>
@@ -135,7 +135,7 @@
             </div>
             <!-- Side Image -->
             <div class="col-lg-5 pt-5" >
-                <img id="side-image" src="img/group-22.svg" >
+                <img id="side-image" src="img/group-22.svg" alt="">
             </div>
         </div>
     </main>
@@ -159,19 +159,19 @@
                 <!-- Social Icons -->
                 <div id="social-icon-bar">
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/facebook.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/facebook.png" class="social-icon" alt=""></a>
                     </div>
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/twitter.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/twitter.png" class="social-icon" alt=""></a>
                     </div>
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/linkedin.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/linkedin.png" class="social-icon" alt=""></a>
                     </div>
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/youtube.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/youtube.png" class="social-icon" alt=""></a>
                     </div>
                     <div >
-                        <a href="#" target="_blank"><img src="img/footer/instagram.png" class="social-icon"></a>
+                        <a href="#" target="_blank"><img src="img/footer/instagram.png" class="social-icon" alt=""></a>
                     </div>
                 </div>
             </div>
