--- a/search-university.html
+++ b/search-university.html
@@ -8,7 +8,7 @@
     <!-- CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="university-find.css">
+    <link rel="stylesheet" href="search-university.css">
 </head>
 <body>
     <header class="header">
