--- a/single-university-page.html
+++ b/single-university-page.html
@@ -270,7 +270,7 @@
                                     <p class="location_p">Aarhus Campus, Aarhus, Denmark</p>
                                 </div>
                             </div>
-                            <div class="col-lg-2 col-md-2 ">
+                            <div class="col-lg-2 col-md-2">
                                 <button type="button" class="btn btn-warning" style="margin-top: 15px;float:right;">View Program ></button>
                             </div>
 
@@ -286,9 +286,9 @@
             </div>            
         </div>
 
-        <div class="col-lg-3 bg-secondary">
+        <div class="col-lg-3">
             <!-- Add Section -->
-            <div class="p-3 justify">
+            <div class="m-3 bg-secondary">
                 <h1>ADD is an older term for what is now known as the inattentive type of ADHD.</h1>
             </div>
         </div>
