--- a/program.html
+++ b/program.html
@@ -113,14 +113,13 @@
                     <div class="col-lg-5">
                         <a href="">Actuarial Science</a>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-4">
                         <p>Science</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-3">
                         <p>Bachelor Degree (4 Years)</p>
-                    </div>
-                    <div class="col-lg-2">
-                        <p>U of R FNUniv</p>
+                        <p>Masters Degree (2 Years)</p>
+                        <p>PhD Degree (3 Years)</p>
                     </div>
                     <hr class="mt-2">
                 </div>
