--- a/program.html
+++ b/program.html
@@ -163,14 +163,13 @@
                     <div class="col-lg-5">
                         <a href="">Applied Physics</a>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-4">
                         <p>Science</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-3">
                         <p>Bachelor Degree (4 Years)</p>
-                    </div>
-                    <div class="col-lg-2">
-                        <p>U of R Campion FNUniv Luther</p>
+                        <p>Masters Degree (2 Years)</p>
+                        <p>Phd Degree (3 Years)</p>
                     </div>
                     <hr class="mt-2">
                 </div>
@@ -178,14 +177,11 @@
                     <div class="col-lg-5">
                         <a href="">Art History</a>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-4">
                         <p>Media, Art, and Performance</p>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-3">
                         <p>Bachelor Degree (4 Years)</p>
-                    </div>
-                    <div class="col-lg-2">
-                        <p>U of R Campion FNUniv Luther</p>
                     </div>
                     <hr class="mt-2">
                 </div>
