--- a/subject.html
+++ b/subject.html
@@ -155,7 +155,7 @@
     </main>
     
     <!-- Footer -->
-    <footer class="bg-dark pt-5">
+    <footer class="bg-dark">
         <div class="row container pt-4 pb-5">
             <div class="col-lg-8">
                 <div>
