--- a/single-university-page.html
+++ b/single-university-page.html
@@ -162,7 +162,7 @@
 				<!-- Button List -->
 				<div class="filter_page2 p-3">
 					<button type="button" class="btn btn-light btnstudy1">
-						All Programs
+						Programs
 					</button>
 					<button type="button" class="btn btn-light btnstudy1">
 						Bachelor
