--- a/home.html
+++ b/home.html
@@ -485,7 +485,7 @@
 					</div>
 
 					<!-- Features Countries -->
-					<div class="col-lg-10 mt-3 mb-3" id="features-area">
+					<div class="col-lg-10 mt-3" id="features-area">
 						<div class="filter_page2">
 							<p style="padding-left: 5px; font-weight: 700">
 								FEATURED COUNTRIES:
