--- a/home.html
+++ b/home.html
@@ -635,16 +635,16 @@
 
 		<!-- Footer -->
 		<footer class="bg-dark">
-			<div class="row container pt-4 pb-5">
+			<div class="row ms-3 pt-4 pb-5 gx-0">
 				<div class="col-lg-8">
-					<div class="ms-4">
+					<div>
 						<a href="#" class="footer-menu">ABOUT</a>
 						<a href="#" class="footer-menu">CONTACT</a>
 						<a href="#" class="footer-menu">PRIVACY</a>
 						<a href="#" class="footer-menu">USERS</a>
 						<a href="#" class="footer-menu">COOKIES</a>
 					</div>
-					<div class="mt-4 ms-4">
+					<div class="mt-4">
 						<small id="footer-small"
 							>© QS Quacquarelli Symonds Limited 1994 - 2021. All rights
 							reserved.
@@ -653,14 +653,14 @@
 				</div>
 				<div class="col-lg-4">
 					<!-- Social Icons -->
-					<div id="social-icon-bar" class="ms-3">
+					<div id="social-icon-bar">
 						<div>
-							<a href="#" target="_blank"
+							<a href="" target="_blank"
 								><img src="img/footer/facebook.png" class="social-icon" alt=""
 							/></a>
 						</div>
 						<div>
-							<a href="#" target="_blank"
+							<a href="" target="_blank"
 								><img src="img/footer/twitter.png" class="social-icon" alt=""
 							/></a>
 						</div>
