--- a/program.html
+++ b/program.html
@@ -144,7 +144,7 @@
 						<div class="col-lg-3">
 							<p>Bachelor Degree (4 Years)</p>
 						</div>
-						<hr class="mt-2" />
+						<hr class="" />
 					</div>
 					<div class="row p-3 pt-0">
 						<div class="col-lg-5">
@@ -241,8 +241,8 @@
 		</main>
 
 		<!-- Footer -->
-		<footer class="bg-dark pt-5">
-			<div class="row container pt-4 pb-5">
+		<footer class="bg-dark">
+			<div class="row ms-3 pt-4 pb-5 gx-0">
 				<div class="col-lg-8">
 					<div>
 						<a href="#" class="footer-menu">ABOUT</a>
@@ -262,12 +262,12 @@
 					<!-- Social Icons -->
 					<div id="social-icon-bar">
 						<div>
-							<a href="#" target="_blank"
+							<a href="" target="_blank"
 								><img src="img/footer/facebook.png" class="social-icon" alt=""
 							/></a>
 						</div>
 						<div>
-							<a href="#" target="_blank"
+							<a href="" target="_blank"
 								><img src="img/footer/twitter.png" class="social-icon" alt=""
 							/></a>
 						</div>
