--- a/search-university.html
+++ b/search-university.html
@@ -130,11 +130,13 @@
 					<!-- Nationality -->
 					<div class="mt-5 pt-5 p-4 bg-light">
 						<h5>NATIONALITY</h5>
-						<select class="form-control" id="exampleFormControlSelect1">
-							<option>Bangladeshi</option>
-							<option>Indian</option>
-							<option>Japanis</option>
-							<option>Pakistani</option>
+						<select class="form-select" aria-label="Default select example">
+							<option selected>Open this select menu</option>
+							<option value="1">Bangladesh</option>
+							<option value="2">Indian</option>
+							<option value="3">Canadian</option>
+							<option value="4">American</option>
+							<option value="5">Pakistani</option>
 						</select>
 					</div>
 					<!-- Destination -->
