--- a/search-university.html
+++ b/search-university.html
@@ -132,7 +132,7 @@
 						<h5>NATIONALITY</h5>
 						<select class="form-select" aria-label="Default select example">
 							<option selected>Open this select menu</option>
-							<option value="1">Bangladesh</option>
+							<option value="1">Bangladeshi</option>
 							<option value="2">Indian</option>
 							<option value="3">Canadian</option>
 							<option value="4">American</option>
