--- a/single-university-page.html
+++ b/single-university-page.html
@@ -231,7 +231,7 @@
 									aria-expanded="false"
 									aria-controls="collapseTwo"
 								>
-									<strong>Others(1)</strong>
+									<strong>Program List</strong>
 								</button>
 							</h2>
 							<div
