--- a/subject.html
+++ b/subject.html
@@ -209,7 +209,7 @@
 
 		<!-- Footer -->
 		<footer class="bg-dark">
-			<div class="row container pt-4 pb-5">
+			<div class="row ms-3 pt-4 pb-5 gx-0">
 				<div class="col-lg-8">
 					<div>
 						<a href="#" class="footer-menu">ABOUT</a>
@@ -229,12 +229,12 @@
 					<!-- Social Icons -->
 					<div id="social-icon-bar">
 						<div>
-							<a href="#" target="_blank"
+							<a href="" target="_blank"
 								><img src="img/footer/facebook.png" class="social-icon" alt=""
 							/></a>
 						</div>
 						<div>
-							<a href="#" target="_blank"
+							<a href="" target="_blank"
 								><img src="img/footer/twitter.png" class="social-icon" alt=""
 							/></a>
 						</div>
