--- a/search-university.html
+++ b/search-university.html
@@ -40,7 +40,7 @@
 								>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Discover</a>
+								<a class="nav-link" href="#">DISCOVER</a>
 							</li>
 							<li class="nav-item dropdown">
 								<a
@@ -51,7 +51,7 @@
 									data-bs-toggle="dropdown"
 									aria-expanded="false"
 								>
-									Events
+									EVENTS
 								</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<li><a class="dropdown-item" href="#">Action</a></li>
