--- a/program.html
+++ b/program.html
@@ -134,7 +134,7 @@
 						<hr class="mt-2 mb-2" />
 					</div>
 					<!-- Programs -->
-					<div class="row p-3">
+					<div class="row p-3 pt-0">
 						<div class="col-lg-5">
 							<a href="">Accounting</a>
 						</div>
@@ -144,7 +144,7 @@
 						<div class="col-lg-3">
 							<p>Bachelor Degree (4 Years)</p>
 						</div>
-						<hr class="" />
+						<hr class="mt-2" />
 					</div>
 					<div class="row p-3 pt-0">
 						<div class="col-lg-5">
